--- a/tpl/footer.html
+++ b/tpl/footer.html
@@ -1,14 +1,22 @@
 <footer class="w-full bg-white border-t border-[#DCDEE0]">
 
   <!-- ================= DESKTOP ================= -->
-  <div class="hidden lg:block max-w-[1600px] mx-auto px-[60px] pt-[72px] pb-[56px] text-[#24272A]">
+  <div
+    class="hidden lg:block max-w-[1600px] mx-auto
+           px-[60px] pt-[72px] pb-[56px]
+           text-[#24272A]
+           font-[WixMadeforDisplay]"
+  >
 
-    <div class="grid grid-cols-4 gap-x-[72px] gap-y-[48px] text-sm leading-[160%]">
+    <div class="grid grid-cols-4 gap-x-[72px] gap-y-[48px]
+                text-[16px] leading-[160%] font-normal">
 
       <!-- COL 1 -->
       <div class="space-y-6">
         <div>
-          <div class="font-semibold mb-3">Корпуса</div>
+          <div class="text-[20px] font-semibold mb-3">
+            Корпуса
+          </div>
           <div class="space-y-2">
             <a href="#" class="block hover:text-[#C93635]">Главный корпус</a>
             <a href="#" class="block hover:text-[#C93635]">Ризница Троице-Сергиевской Лавры</a>
@@ -17,12 +25,14 @@
           </div>
         </div>
 
-        <a href="#" class="font-semibold hover:text-[#C93635] inline-block">
+        <a href="#" class="inline-block text-[20px] font-semibold hover:text-[#C93635]">
           Интерактивная карта
         </a>
 
         <div>
-          <div class="font-semibold mb-3">Для групп</div>
+          <div class="text-[20px] font-semibold mb-3">
+            Для групп
+          </div>
           <div class="space-y-2">
             <a href="#" class="block hover:text-[#C93635]">Турфирмам</a>
             <a href="#" class="block hover:text-[#C93635]">Группам учащихся</a>
@@ -35,7 +45,9 @@
 
       <!-- COL 2 -->
       <div>
-        <div class="font-semibold mb-3">Посетителям</div>
+        <div class="text-[20px] font-semibold mb-3">
+          Посетителям
+        </div>
         <div class="space-y-2">
           <a href="#" class="block hover:text-[#C93635]">Часто задаваемые вопросы</a>
           <a href="#" class="block hover:text-[#C93635]">Билеты</a>
@@ -53,19 +65,25 @@
 
       <!-- COL 3 -->
       <div>
-        <div class="font-semibold mb-3">Мероприятия</div>
+        <div class="text-[20px] font-semibold mb-3">
+          Мероприятия
+        </div>
         <div class="space-y-2 mb-10">
           <a href="#" class="block hover:text-[#C93635]">Афиша</a>
           <a href="#" class="block hover:text-[#C93635]">Выходные в Сергиевом Посаде</a>
         </div>
 
         <div>
-          <div class="font-semibold mb-3">Экскурсии</div>
+          <div class="text-[20px] font-semibold mb-3">
+            Экскурсии
+          </div>
           <a href="#" class="block hover:text-[#C93635]">Экскурсии</a>
         </div>
 
         <div class="mt-10">
-          <div class="font-semibold mb-3">О музее</div>
+          <div class="text-[20px] font-semibold mb-3">
+            О музее
+          </div>
           <div class="space-y-2">
             <a href="#" class="block hover:text-[#C93635]">Научная деятельность</a>
             <a href="#" class="block hover:text-[#C93635]">Документы</a>
@@ -79,11 +97,13 @@
 
       <!-- COL 4 -->
       <div class="space-y-6">
-        <button class="w-full border border-[#24272A] py-3 font-semibold hover:bg-[#24272A] hover:text-white transition">
+        <button class="w-full border border-[#24272A] py-3 text-[16px] font-semibold
+                       hover:bg-[#24272A] hover:text-white transition">
           Обратный звонок
         </button>
 
-        <a href="mailto:sergiev-mus@mail.ru" class="font-semibold block hover:text-[#C93635]">
+        <a href="mailto:sergiev-mus@mail.ru"
+           class="block text-[20px] font-semibold hover:text-[#C93635]">
           sergiev-mus@mail.ru
         </a>
 
@@ -111,7 +131,9 @@
     </div>
 
     <!-- BOTTOM -->
-    <div class="mt-16 pt-6 border-t border-[#DCDEE0] flex justify-between items-start text-sm text-[#6B7280]">
+    <div class="mt-16 pt-6 border-t border-[#DCDEE0]
+                flex justify-between items-start
+                text-[14px] leading-[160%] text-[#6B7280]">
       <div class="space-y-2">
         <div class="text-[#24272A]">
           141310, Россия, Московская область, г. Сергиев Посад, Проспект Красной Армии, д. 144
@@ -122,7 +144,9 @@
         <div>
           Использование материалов сайта без разрешения правообладателя — запрещено
         </div>
-        <a href="#" class="block hover:text-[#24272A]">Политика конфиденциальности</a>
+        <a href="#" class="block hover:text-[#24272A]">
+          Политика конфиденциальности
+        </a>
       </div>
 
       <div class="flex items-center gap-2 text-[#24272A]">
@@ -133,7 +157,6 @@
 
   </div>
 
-  <!-- ================= MOBILE (БЕЗ ИЗМЕНЕНИЙ) ================= -->
-  <!-- твоя mobile-часть остаётся как есть -->
+  <!-- MOBILE — без изменений -->
 
 </footer>
