--- a/tpl/hero.html
+++ b/tpl/hero.html
@@ -3,14 +3,17 @@
   class="relative bg-[#C93635] overflow-hidden"
 >
 
-  <!-- SHAPE / ARCA (ПРИВЯЗАНА К СЕКЦИИ) -->
+  <!-- SHAPE / ARCA -->
   <img
     src="/assets/svg/arca.svg"
     alt=""
     class="absolute
-           right-0 bottom-0
-           w-[520px] lg:w-[665px]
-           h-auto
+           left-1/2 bottom-0
+           -translate-x-1/2
+           w-[420px]
+           sm:w-[520px]
+           lg:left-auto lg:right-0 lg:translate-x-0
+           lg:w-[665px]
            pointer-events-none select-none
            z-0"
   >
@@ -20,16 +23,24 @@
     class="relative z-10
            max-w-[1600px] mx-auto
            px-4 lg:px-[60px]
-           pt-8 lg:pt-12
-           pb-10 lg:pb-16"
+           pt-6 lg:pt-12
+           pb-0 lg:pb-16"
   >
-    <div class="grid lg:grid-cols-2 gap-12 items-center">
+
+    <div class="flex flex-col lg:grid lg:grid-cols-2 gap-10 items-start">
 
       <!-- LEFT -->
-      <div class="text-white font-[Racama]">
+      <div class="text-white w-full">
 
         <!-- DATE -->
-        <div class="flex items-center gap-4 text-sm opacity-90 mb-6">
+        <div
+          class="flex items-center gap-4
+                 font-['Wix_Madefor_Display']
+                 font-semibold
+                 text-[16px] leading-[160%]
+                 opacity-90
+                 mb-4 lg:mb-6"
+        >
           <span x-text="slides[current].date.split('—')[0]"></span>
           <span class="w-10 h-px bg-white/70"></span>
           <span x-text="slides[current].date.split('—')[1]"></span>
@@ -37,10 +48,12 @@
 
         <!-- TITLE -->
         <h1
-          class="font-semibold
-                 text-[44px] leading-[1.1]
-                 lg:text-[72px] lg:leading-[1.05]
-                 mb-6"
+          class="font-[Racama] font-normal
+                 tracking-[-0.02em]
+                 text-[52px] leading-[1.1]
+                 sm:text-[60px]
+                 lg:text-[140px] lg:leading-[0.9]
+                 mb-4 lg:mb-6"
         >
           <span x-text="slides[current].titleLine1"></span><br>
           <span x-text="slides[current].titleLine2"></span>
@@ -48,17 +61,24 @@
 
         <!-- SUBTITLE -->
         <p
-          class="text-sm lg:text-base opacity-90 mb-10"
+          class="font-['Wix_Madefor_Display']
+                 text-[16px] leading-[160%]
+                 opacity-90
+                 max-w-[520px]
+                 mb-6 lg:mb-10"
           x-text="slides[current].subtitle"
         ></p>
 
         <!-- BUTTONS -->
-        <div class="flex gap-4 mb-12">
+        <div class="flex flex-col lg:flex-row gap-4 mb-8 lg:mb-12 w-full">
+
           <a
             href="#"
-            class="group inline-flex items-center gap-3
+            class="group w-full lg:w-auto
+                   inline-flex items-center justify-center gap-3
                    h-[52px] px-6
-                   bg-white text-[#24272A] font-semibold
+                   bg-white text-[#C93635]
+                   font-semibold
                    border border-white
                    hover:bg-transparent hover:text-white transition"
           >
@@ -72,7 +92,8 @@
 
           <a
             href="#"
-            class="inline-flex items-center gap-3
+            class="w-full lg:w-auto
+                   inline-flex items-center justify-center gap-3
                    h-[52px] px-6
                    border border-white font-semibold
                    hover:bg-white/10 transition"
@@ -82,7 +103,8 @@
         </div>
 
         <!-- SLIDER CONTROLS -->
-        <div class="flex items-center gap-4">
+        <div class="flex items-center gap-4 justify-center lg:justify-start mb-8 lg:mb-0">
+
           <button
             @click="prev"
             class="w-10 h-10 border border-white/70
@@ -105,18 +127,27 @@
                    flex items-center justify-center
                    hover:bg-white/10 transition"
           >→</button>
+
         </div>
       </div>
 
-      <!-- RIGHT -->
-      <div class="relative min-h-[360px] lg:min-h-[430px] flex justify-end">
+      <!-- RIGHT / IMAGE -->
+      <div
+        class="relative w-full
+               min-h-[260px]
+               sm:min-h-[320px]
+               lg:min-h-[430px]
+               flex justify-center lg:justify-end"
+      >
         <img
           :src="slides[current].img"
           alt=""
           class="absolute
-                 right-0
-                 bottom-[-250px]
-                 w-[520px] lg:w-[640px]
+                 bottom-0
+                 w-[260px]
+                 sm:w-[320px]
+                 lg:right-0 lg:bottom-[-250px]
+                 lg:w-[640px]
                  z-10
                  pointer-events-none"
         >
